Some refactoring, simple tests of session

--- a/.jshintrc
+++ b/.jshintrc
@@ -22,8 +22,6 @@
   "white": false,
   "sub": true,
   "globals": {
-    "angular": false,
-    "_": false,
-    "$": false
+    "angular": false
   }
 }
