--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-ng-resource",
-  "version": "0.2.1a",
+  "version": "0.2.2",
   "description": "Secure access to RESTful web APIs",
   "main": "secure-ng-resource.min.js",
   "directories": {
