--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,19 @@
 {
   "name": "secure-ng-resource",
   "version": "0.3.4",
-  "main": ["./build/secure-ng-resource.min.js"],
+  "main": [
+    "./build/secure-ng-resource.min.js"
+  ],
   "dependencies": {
-    "angular": "*",
-    "angular-cookies": "*",
-    "angular-resource": "*"
+    "angular": "1.2.*",
+    "angular-cookies": "1.2.*",
+    "angular-resource": "1.2.*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.0-rc.3",
     "jasmine": "1.2.0"
+  },
+  "resolutions": {
+    "angular": "1.2.*"
   }
 }
