--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "bower": "*",
     "grunt": "~0.4.1",
     "grunt-jsdoc": "~0.2.4",
     "grunt-karma": "~0.4.3",
