--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "secure-ng-resource",
-  "version": "0.3.6",
+  "version": "0.3.8",
+  "author": "David Simon <dsimon@americancouncils.org>",
   "description": "Secure access to RESTful web APIs",
   "main": "secure-ng-resource.min.js",
   "directories": {
