--- a/package.json
+++ b/package.json
@@ -1,38 +1,16 @@
 {
   "name": "secure-ng-resource",
-  "version": "0.3.8",
-  "author": "David Simon <dsimon@americancouncils.org>",
-  "description": "Secure access to RESTful web APIs",
-  "main": "secure-ng-resource.min.js",
-  "directories": {
-    "test": "test"
-  },
+  "version": "0.3.9",
+  "author": "American Councils",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AmericanCouncils/secure-ng-resource"
+    "url": "https://github.com/AmericanCouncils/secure-ng-resource.git"
   },
-  "keywords": [
-    "angular",
-    "angularjs",
-    "secure-ng-resource",
-    "ngsecureresource",
-    "restful",
-    "session",
-    "authentication",
-    "oauth"
-  ],
-  "license": "MIT",
+  "main": "build/secure-ng-resource.min.js",
+  "dependencies": {
+    "angular": "1.2.x"
+  },
   "devDependencies": {
-    "bower": "*",
-    "grunt": "~0.4.1",
-    "grunt-jsdoc": "~0.2.4",
-    "grunt-karma": "~0.4.3",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-jshint": "0.1.1rc6",
-    "grunt-contrib-uglify": "~0.1.2",
-    "grunt-angular-templates": "~0.3.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-jasmine": "~0.3.3",
-    "grunt-cli": "~0.1.7"
+    "jasmine-node": "1.2.0"
   }
 }
