--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "angular": "1.2.x"
   },
   "devDependencies": {
-    "jasmine-node": "1.2.0"
+    "jasmine-node": "1.2.0",
+    "grunt-karma": "0.8.2",
+    "grunt-contrib-uglify": "0.4.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-clean": "0.5.0",
+    "grunt-jsdoc": "0.5.4",
+    "karma-jasmine": "0.1.5",
+    "karma-phantomjs-launcher": "0.1.4"
   }
 }
