--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "angular": "1.2.*",
     "angular-cookies": "1.2.*",
-    "angular-resource": "1.2.*"
+    "angular-resource": "1.2.*",
+    "base-64": "0.1.*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.0-rc.3",
