--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
   - '0.10'
   - '0.8'
 
-before_script: bower install
+before_script: ./node_modules/bower/bin/bower install
 
 script: grunt test
