--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-clean": "0.5.0",
     "grunt-jsdoc": "0.5.4",
     "karma-jasmine": "0.1.5",
-    "karma-phantomjs-launcher": "0.1.4"
+    "karma-phantomjs-launcher": "0.1.4",
+    "bower": "1.2.7"
   }
 }
