--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,4 @@
 language: node_js
-
-node_js:
-  - '0.10'
-  - '0.8'
-
+node_js: '0.10'
 before_script: ./node_modules/bower/bin/bower install
-
 script: grunt test
