--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "base-64": "0.1.*"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.0-rc.3",
+    "angular-mocks": "1.2.23",
     "jasmine": "1.2.0"
   },
   "resolutions": {
