--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular": "1.5.*",
     "angular-cookies": "1.5.*",
     "angular-resource": "1.5.*",
-    "base-64": "0.1.*"
+    "base-64": "0.1.*",
+    "jwt-decode": "2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.*",
