--- a/.jshintrc
+++ b/.jshintrc
@@ -23,7 +23,7 @@
   "sub": true,
   "globals": {
     "angular": false,
-    "base64": false,
-    "jwt_decode": false
+    "jwt_decode": false,
+    "localforage": false
   }
 }
