--- a/bower.json
+++ b/bower.json
@@ -5,10 +5,9 @@
   ],
   "dependencies": {
     "angular": "1.5.*",
-    "angular-cookies": "1.5.*",
     "angular-resource": "1.5.*",
-    "base-64": "0.1.*",
-    "jwt-decode": "2.1.0"
+    "jwt-decode": "2.1.0",
+    "localforage": "1.4.3"
   },
   "devDependencies": {
     "angular-mocks": "1.5.*",
