Using regular localStorage instead of localforage to avoid async complications

--- a/.jshintrc
+++ b/.jshintrc
@@ -23,7 +23,6 @@
   "sub": true,
   "globals": {
     "angular": false,
-    "jwt_decode": false,
-    "localforage": false
+    "jwt_decode": false
   }
 }
