--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "angular": "1.5.*",
     "angular-resource": "1.5.*",
-    "jwt-decode": "2.1.0",
-    "localforage": "1.4.3"
+    "jwt-decode": "2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.*",
