--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "angular": "1.5.*",
     "angular-resource": "1.5.*",
-    "jwt-decode": "2.1.0"
+    "base-64": "0.1.*"
   },
   "devDependencies": {
     "angular-mocks": "1.5.*",
